Move JSON code into a separate crate and make the output more fine-grained.
This splits out the various parts of instructions instead of just giving
a single string.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/cton-util.rs"
 
 [dependencies]
 cretonne = { path = "lib/cretonne" }
+cretonne-json = { path = "lib/json" }
 cretonne-reader = { path = "lib/reader" }
 filecheck = { path = "lib/filecheck" }
 docopt = "0.6.86"
