Finished adding `no_std` support to lib/cretonne

--- a/lib/cretonne/Cargo.toml
+++ b/lib/cretonne/Cargo.toml
@@ -13,7 +13,8 @@ build = "build.rs"
 # cretonne supports `no_std`
 # Using `std` is default, however
 default = ["std"]
-std = []
+# workaround cargo not letting you conditionally *not* include dependencies
+std = ["hashmap_core/disable"]
 
 [lib]
 name = "cretonne"
@@ -23,3 +24,6 @@ name = "cretonne"
 # Please don't add any unless they are essential to the task of creating binary
 # machine code. Integration tests that need external dependencies can be
 # accomodated in `tests`.
+
+[dependencies.hashmap_core]
+version = "0.1.1"
