--- a/lib/native/Cargo.toml
+++ b/lib/native/Cargo.toml
@@ -15,3 +15,6 @@ cretonne = { path = "../cretonne" }
 
 [target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
 raw-cpuid = "3.0.0"
+
+[features]
+no_std = ["cretonne/no_std"]
