--- a/lib/wasm/Cargo.toml
+++ b/lib/wasm/Cargo.toml
@@ -15,5 +15,17 @@ wasmparser = "0.13.0"
 cretonne = { path = "../cretonne" }
 cretonne-frontend = { path = "../frontend" }
 
+[dependencies.hashmap_core]
+version = "0.1.1"
+optional = true
+[dependencies.error_core]
+version = "0.1.0"
+optional = true
+
 [dev-dependencies]
 tempdir = "0.3.5"
+
+[features]
+# Currently, the only feature is the `no_std` feature.
+# Enabling this disables use of `stdlib`.
+no_std = ["hashmap_core", "error_core", "cretonne/no_std", "cretonne-frontend/no_std"]
