--- a/lib/frontend/Cargo.toml
+++ b/lib/frontend/Cargo.toml
@@ -1,15 +1,14 @@
 [package]
 authors = ["The Cretonne Project Developers"]
 name = "cretonne-frontend"
-version = "0.0.0"
+version = "0.1.0"
 description = "Cretonne IL builder helper"
 license = "Apache-2.0"
 documentation = "https://cretonne.readthedocs.io/"
 repository = "https://github.com/stoklund/cretonne"
-publish = false
 
 [lib]
 name = "cton_frontend"
 
 [dependencies]
-cretonne = { path = "../cretonne" }
+cretonne = { path = "../cretonne", version = "0.1.0" }
