--- a/lib/wasm/Cargo.toml
+++ b/lib/wasm/Cargo.toml
@@ -18,6 +18,7 @@ cretonne-frontend = { path = "../frontend", version = "0.4.0" }
 
 [dev-dependencies]
 tempdir = "0.3.5"
+wabt = "0.2.2"
 
 [badges]
 maintenance = { status = "experimental" }
