Add basic faerie support.
This adds enough functionality to enable simple .o file writing through
faerie. This included adding the functionality to Module to support
RelocSink implementations.

--- a/lib/faerie/Cargo.toml
+++ b/lib/faerie/Cargo.toml
@@ -14,6 +14,7 @@ name = "cton_faerie"
 cretonne = { path = "../cretonne", version = "0.4.2" }
 cretonne-module = { path = "../module", version = "0.4.2" }
 faerie = "0.1.0"
+goblin = "0.0.14"
 failure = "0.1.1"
 
 [badges]
