--- a/lib/simplejit/Cargo.toml
+++ b/lib/simplejit/Cargo.toml
@@ -15,6 +15,8 @@ cretonne = { path = "../cretonne", version = "0.4.2" }
 cretonne-module = { path = "../module", version = "0.4.2" }
 cretonne-native = { path = "../native", version = "0.4.2" }
 region = "0.2.0"
+libc = "0.2.40"
+errno = "0.2.3"
 
 [badges]
 maintenance = { status = "experimental" }
