--- a/lib/module/Cargo.toml
+++ b/lib/module/Cargo.toml
@@ -4,15 +4,13 @@ version = "0.4.4"
 authors = ["The Cretonne Project Developers"]
 description = "Support for linking functions and data with Cretonne"
 repository = "https://github.com/Cretonne/cretonne"
+documentation = "https://cretonne.readthedocs.io/"
 license = "Apache-2.0"
 readme = "README.md"
 
-[lib]
-name = "cton_module"
-
 [dependencies]
-cretonne = { path = "../cretonne", version = "0.4.2" }
-cretonne-entity = { path = "../entity", version = "0.4.2" }
+cretonne-codegen = { path = "../codegen", version = "0.4.4" }
+cretonne-entity = { path = "../entity", version = "0.4.4" }
 
 [badges]
 maintenance = { status = "experimental" }
