--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [package.metadata]
 cargo-fuzz = true
 
+# TODO: Temporarily using a modified binaryen-rs
 [dependencies.binaryen]
 version = "*"
 path = "../lib/binaryen-rs"
@@ -16,9 +17,6 @@ git = "https://github.com/rust-fuzz/libfuzzer-sys.git"
 
 [dependencies.cretonne-wasm]
 path = "../lib/wasm"
-
-#[dependencies.mktemp]
-#version = "0.3.1"
 
 # Prevent this from interfering with workspaces
 [workspace]
