--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
     - sudo dpkg -i wasm-toolchain_0.1.26619_amd64.deb
 install:
     - pip3 install --user --upgrade mypy flake8
+    - mypy --version
     - travis_wait ./check-rustfmt.sh --install
 script: ./test-all.sh
 cache:
