switch back to upstream binaryen-rs; add forgotten integration test directive

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -10,11 +10,9 @@ cargo-fuzz = true
 [dependencies.cargo-fuzz]
 version = "*"
 
-# Temporarily use fork until https://github.com/pepyakin/binaryen-rs/pull/4 is merged
 [dependencies.binaryen]
+git = "https://github.com/pepyakin/binaryen-rs.git"
 version = "*"
-git = "https://github.com/jfoote/binaryen-rs"
-branch = "foote/wasm-mvp-fuzz"
 
 [dependencies.libfuzzer-sys]
 git = "https://github.com/rust-fuzz/libfuzzer-sys.git"
