Use wabt in cton-util.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,9 @@ filecheck = "0.3.0"
 docopt = "1"
 serde = "1.0.8"
 serde_derive = "1.0.8"
-tempdir = "0.3.5"
 term = "0.5.1"
 capstone = "0.3.1"
+wabt = "0.3"
 
 [workspace]
 
