--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,11 @@ name = "cton-util"
 path = "src/cton-util.rs"
 
 [dependencies]
+cfg-if = "0.1"
 cretonne-codegen = { path = "lib/codegen", version = "0.8.0" }
 cretonne-reader = { path = "lib/reader", version = "0.8.0" }
 cretonne-frontend = { path = "lib/frontend", version = "0.8.0" }
-cretonne-wasm = { path = "lib/wasm", version = "0.8.0" }
+cretonne-wasm = { path = "lib/wasm", version = "0.8.0", optional = true }
 cretonne-native = { path = "lib/native", version = "0.8.0" }
 cretonne-filetests = { path = "lib/filetests", version = "0.8.0" }
 cretonne-module = { path = "lib/module", version = "0.8.0" }
@@ -29,7 +30,11 @@ serde = "1.0.8"
 serde_derive = "1.0.8"
 term = "0.5.1"
 capstone = "0.3.1"
-wabt = "0.3"
+wabt = { version = "0.3", optional = true }
+
+[features]
+default = ["wasm"]
+wasm = ["wabt", "cretonne-wasm"]
 
 [workspace]
 
