--- a/lib/codegen/Cargo.toml
+++ b/lib/codegen/Cargo.toml
@@ -12,6 +12,7 @@ build = "build.rs"
 
 [dependencies]
 cranelift-entity = { path = "../entity", version = "0.15.0", default-features = false }
+cranelift-codegen-meta = { path = "../codegen-meta", version = "0.15.0" }
 failure = { version = "0.1.1", default-features = false, features = ["derive"] }
 failure_derive = { version = "0.1.1", default-features = false }
 hashmap_core = { version = "0.1.8", optional = true }
@@ -20,6 +21,9 @@ target-lexicon = { version = "0.0.3", default-features = false }
 # Please don't add any unless they are essential to the task of creating binary
 # machine code. Integration tests that need external dependencies can be
 # accomodated in `tests`.
+
+[build-dependencies]
+cranelift-codegen-meta = { path = "../codegen-meta", version = "0.15.0" }
 
 [features]
 # The "std" feature enables use of libstd. The "core" feature enables use
