--- a/lib/umbrella/Cargo.toml
+++ b/lib/umbrella/Cargo.toml
@@ -3,7 +3,7 @@ authors = ["The Cretonne Project Developers"]
 name = "cretonne"
 version = "0.10.0"
 description = "Umbrella for commonly-used cretonne crates"
-license = "Apache-2.0"
+license = "Apache-2.0 WITH LLVM-exception"
 documentation = "https://cretonne.readthedocs.io/"
 repository = "https://github.com/cretonne/cretonne"
 readme = "README.md"
