--- a/lib/wasm/Cargo.toml
+++ b/lib/wasm/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.10.0"
 authors = ["The Cretonne Project Developers"]
 description = "Translator from WebAssembly to Cretonne IR"
 repository = "https://github.com/cretonne/cretonne"
-license = "Apache-2.0"
+license = "Apache-2.0 WITH LLVM-exception"
 readme = "README.md"
 keywords = ["webassembly", "wasm"]
 
