Added new license to codegen-meta Cargo.toml

--- a/lib/codegen-meta/Cargo.toml
+++ b/lib/codegen-meta/Cargo.toml
@@ -3,7 +3,7 @@ name = "cranelift-codegen-meta"
 authors = ["The Cranelift Project Developers"]
 version = "0.15.0"
 description = "DSL for cranelift-codegen code generator library"
-license = "Apache-2.0"
+license = "Apache-2.0 WITH LLVM-exception"
 documentation = "https://cranelift.readthedocs.io/"
 repository = "https://github.com/CraneStation/cranelift"
 keywords = ["compile", "compiler", "jit"]
