--- a/lib/codegen/Cargo.toml
+++ b/lib/codegen/Cargo.toml
@@ -22,7 +22,7 @@ target-lexicon = { version = "0.0.3", default-features = false }
 # accomodated in `tests`.
 
 [build-dependencies]
-cranelift-codegen-meta = { path = "codegen-meta", version = "0.17.0-alpha" }
+cranelift-meta = { path = "meta", version = "0.17.0-alpha" }
 
 [features]
 # The "std" feature enables use of libstd. The "core" feature enables use
