--- a/lib/preopt/Cargo.toml
+++ b/lib/preopt/Cargo.toml
@@ -12,11 +12,14 @@ keywords = ["optimize", "compile", "compiler", "jit"]
 
 [dependencies]
 cranelift-codegen = { path = "../codegen", version = "0.22.0", default-features = false }
+cranelift-entity = { path = "../entity", version = "0.22.0", default-features = false }
+# This is commented out because it doesn't build on Rust 1.25.0, which
+# cranelift currently supports.
 # rustc_apfloat = { version = "0.1.2", default-features = false }
 
 [features]
 default = ["std"]
-std = ["cranelift-codegen/std"]
+std = ["cranelift-codegen/std", "cranelift-entity/std"]
 core = ["cranelift-codegen/core"]
 
 [badges]
