--- a/cranelift-wasm/Cargo.toml
+++ b/cranelift-wasm/Cargo.toml
@@ -21,8 +21,8 @@ failure_derive = { version = "0.1.1", default-features = false }
 log = { version = "0.4.6", default-features = false }
 cast = { version = "0.2.2", default-features = false }
 target-lexicon = { version = "0.3.0", default-features = false }
-gimli = "0.17.0"
-faerie = "0.9.1"
+gimli = { version = "0.17.0", optional = true }
+faerie = { version = "0.9.1", optional = true }
 
 [dev-dependencies]
 wabt = "0.7.0"
@@ -32,6 +32,7 @@ target-lexicon = "0.4.0"
 default = ["std"]
 std = ["cranelift-codegen/std", "cranelift-frontend/std", "wasmparser/std", "failure/std"]
 core = ["hashmap_core", "cranelift-codegen/core", "cranelift-frontend/core", "wasmparser/core"]
+dwarf = ["gimli", "faerie"]
 
 [badges]
 maintenance = { status = "experimental" }
