--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ wabt = { version = "0.7.0", optional = true }
 target-lexicon = "0.4.0"
 pretty_env_logger = "0.3.0"
 file-per-thread-logger = "0.1.2"
+indicatif = "0.11.0"
 
 [features]
 default = ["disas", "wasm"]
