Add serde derive to PrimaryMap

--- a/cranelift-entity/Cargo.toml
+++ b/cranelift-entity/Cargo.toml
@@ -11,10 +11,14 @@ readme = "README.md"
 keywords = ["entity", "set", "map"]
 edition = "2018"
 
+[dependencies]
+serde = { version = "1.0.94", features = ["derive"], optional = true }
+
 [features]
 default = ["std"]
 std = []
 core = []
+enable-serde = ["serde"]
 
 [badges]
 maintenance = { status = "experimental" }
