--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,9 @@ target-lexicon = "0.4.0"
 pretty_env_logger = "0.3.0"
 file-per-thread-logger = "0.1.2"
 indicatif = "0.11.0"
+region = "2.1.2"
+mmap = "0.1.1"
+walkdir = "2.2"
 
 [features]
 default = ["disas", "wasm", "cranelift-codegen/all-arch"]
