--- a/cranelift-codegen/Cargo.toml
+++ b/cranelift-codegen/Cargo.toml
@@ -18,7 +18,7 @@ cranelift-bforest = { path = "../cranelift-bforest", version = "0.41.0", default
 failure = { version = "0.1.1", default-features = false, features = ["derive"] }
 failure_derive = { version = "0.1.1", default-features = false }
 hashmap_core = { version = "0.1.9", optional = true }
-target-lexicon = { version = "0.4.0", default-features = false }
+target-lexicon = "0.8.0"
 log = { version = "0.4.6", default-features = false }
 serde = { version = "1.0.94", features = ["derive"], optional = true }
 # It is a goal of the cranelift-codegen crate to have minimal external dependencies.
@@ -38,7 +38,6 @@ default = ["std"]
 std = [
     "cranelift-entity/std",
     "cranelift-bforest/std",
-    "target-lexicon/std",
     "cranelift-codegen-meta/std"
 ]
 
