--- a/cranelift-native/Cargo.toml
+++ b/cranelift-native/Cargo.toml
@@ -11,14 +11,14 @@ edition = "2018"
 
 [dependencies]
 cranelift-codegen = { path = "../cranelift-codegen", version = "0.41.0", default-features = false }
-target-lexicon = { version = "0.4.0", default-features = false }
+target-lexicon = "0.8.0"
 
 [target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
 raw-cpuid = "6.0.0"
 
 [features]
 default = ["std"]
-std = ["cranelift-codegen/std", "target-lexicon/std"]
+std = ["cranelift-codegen/std"]
 # when compiling with the "core" feature, nightly must be enabled
 # enabling the "nightly" feature for raw-cpuid allows avoiding
 # linking in a c-library.
