Fix #796: Enable basic-blocks by default.

--- a/cranelift-frontend/Cargo.toml
+++ b/cranelift-frontend/Cargo.toml
@@ -18,7 +18,7 @@ hashmap_core = { version = "0.1.9", optional = true }
 smallvec = { version = "0.6.10" }
 
 [features]
-default = ["std"]
+default = ["std", "basic-blocks"]
 std = ["cranelift-codegen/std"]
 core = ["hashmap_core", "cranelift-codegen/core"]
 
